# chess

./: .gitignore  Makefile  fen.cpp  gameLogic.cpp  gameLogic.h  interface.cpp  interface.h  main.cpp
src/: CMakeLists.txt  fen.cpp  gameLogic.cpp  gameLogic.h  interface.cpp  interface.h  main.cpp
src/include/SFML/Graphics/: Makefile
src/include/SFML/Network/: Makefile
src/include/SFML/System/: Makefile
src/include/SFML/Window/: Makefile
